[gd_scene load_steps=19 format=3 uid="uid://c8k2g73651cah"]

[ext_resource type="Script" uid="uid://bo5vx6p2kdwjy" path="res://Scripts/Controllers/GameWinController.gd" id="1_hna4s"]
[ext_resource type="Texture2D" uid="uid://dgkrojwqs5egn" path="res://Assets/Sprites/Buildings/Map_Jour.png" id="2_7v71e"]
[ext_resource type="Texture2D" uid="uid://5g3gslitkgb2" path="res://Assets/Sprites/UI/Restart.png" id="4_8xk7m"]
[ext_resource type="Texture2D" uid="uid://vgebmsy4xhbh" path="res://Assets/Sprites/UI/quit_fins.png" id="5_2eulo"]
[ext_resource type="Texture2D" uid="uid://ckgiiopsxb3l7" path="res://Assets/Sprites/UI/fond_texte_blanc.png" id="5_ca6pr"]
[ext_resource type="Shader" uid="uid://birixytw2cib0" path="res://Assets/Shaders/GameWin.gdshader" id="6_7v71e"]
[ext_resource type="VideoStream" uid="uid://qask7d0y24dm" path="res://Assets/videos/Green-Screen-Sniper.ogv" id="6_33rig"]
[ext_resource type="Texture2D" uid="uid://krvlq4187wa1" path="res://Assets/Sprites/UI/GameWin.png" id="7_8xk7m"]
[ext_resource type="Shader" uid="uid://c4nffjp86nq0v" path="res://Assets/Sprites/dialogues.gdshader" id="8_gmufq"]
[ext_resource type="Texture2D" uid="uid://b7qlfcxya7nq3" path="res://Assets/Sprites/UI/chien.png" id="9_7qtym"]
[ext_resource type="VideoStream" uid="uid://cj00ov7xywdih" path="res://Assets/videos/snoopdanceogv.ogv" id="10_7qtym"]
[ext_resource type="VideoStream" uid="uid://r278dyqwt0f5" path="res://Assets/videos/Oh-my-god-MLG-GREEN-SCREEN-EFFECT.ogv" id="12_vwueq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8xk7m"]
shader = ExtResource("6_7v71e")
shader_parameter/force_du_flou = 2.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vwueq"]
shader = ExtResource("8_gmufq")
shader_parameter/key_color1 = Color(0.08235294, 1, 0.039215688, 1)
shader_parameter/tolerance = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7qtym"]
shader = ExtResource("8_gmufq")
shader_parameter/key_color1 = Color(0.08235294, 1, 0.039215688, 1)
shader_parameter/tolerance = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gfnec"]
shader = ExtResource("8_gmufq")
shader_parameter/key_color1 = Color(0.1764706, 0.85882354, 0.23529412, 1)
shader_parameter/tolerance = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_olsgf"]
shader = ExtResource("8_gmufq")
shader_parameter/key_color1 = Color(0.003921569, 0.84705883, 0, 1)
shader_parameter/tolerance = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_33rig"]
shader = ExtResource("8_gmufq")
shader_parameter/key_color1 = Color(1, 1, 1, 1)
shader_parameter/tolerance = 0.1

[node name="GameWin" type="Node2D"]
script = ExtResource("1_hna4s")

[node name="Map_jour" type="Sprite2D" parent="."]
position = Vector2(576.00006, 324.50003)
scale = Vector2(0.4186047, 0.42122394)
texture = ExtResource("2_7v71e")

[node name="FondFlou" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_8xk7m")
offset_right = 1151.0
offset_bottom = 650.0

[node name="snoopdog" type="VideoStreamPlayer" parent="."]
material = SubResource("ShaderMaterial_vwueq")
offset_left = 309.0
offset_top = 429.0
offset_right = 753.0
offset_bottom = 651.0
stream = ExtResource("10_7qtym")
volume_db = -80.0
expand = true
loop = true

[node name="snoopdog2" type="VideoStreamPlayer" parent="."]
material = SubResource("ShaderMaterial_7qtym")
offset_left = 831.0
offset_top = 429.0
offset_right = 1275.0
offset_bottom = 651.0
stream = ExtResource("10_7qtym")
volume_db = -80.0
autoplay = true
expand = true
loop = true

[node name="Snipe" type="VideoStreamPlayer" parent="."]
material = SubResource("ShaderMaterial_gfnec")
offset_right = 1153.0
offset_bottom = 651.0
stream = ExtResource("6_33rig")
autoplay = true
expand = true

[node name="ScreenCrazy" type="VideoStreamPlayer" parent="."]
material = SubResource("ShaderMaterial_olsgf")
offset_right = 1152.0
offset_bottom = 652.0
stream = ExtResource("12_vwueq")
autoplay = true
expand = true

[node name="Restart" type="Button" parent="."]
offset_left = 623.0
offset_top = 210.0
offset_right = 1011.0
offset_bottom = 450.0
theme_override_font_sizes/font_size = 80
icon = ExtResource("4_8xk7m")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Quit" type="Button" parent="."]
offset_left = 622.0
offset_top = 436.0
offset_right = 998.0
offset_bottom = 632.0
theme_override_font_sizes/font_size = 80
icon = ExtResource("5_2eulo")
flat = true
icon_alignment = 1
expand_icon = true

[node name="FondTexteBlanc" type="Sprite2D" parent="."]
position = Vector2(218, 335.00003)
scale = Vector2(0.6146723, 0.5290507)
texture = ExtResource("5_ca6pr")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 54.0
offset_top = 83.0
offset_right = 389.0
offset_bottom = 638.0

[node name="GameWin" type="Sprite2D" parent="."]
position = Vector2(812, 116.062515)
scale = Vector2(0.28630322, 0.25088862)
texture = ExtResource("7_8xk7m")

[node name="GPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_33rig")
position = Vector2(-676, -948)
amount = 400
texture = ExtResource("9_7qtym")
lifetime = 10.0
speed_scale = 0.5
fixed_fps = 60
direction = Vector2(35, 10)
initial_velocity_min = 1000.0
initial_velocity_max = 1000.0
angle_min = -407.5
angle_max = 122.0
scale_amount_min = 0.0
scale_amount_max = 0.2

[connection signal="finished" from="Snipe" to="." method="_on_snipe_finished"]
[connection signal="finished" from="ScreenCrazy" to="." method="_on_screen_crazy_finished"]
[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
